# esp32-idf-slint

./: Cargo.toml  build.rs  esp_lcd_ili9488.h  libtest.rlib  rust-toolchain.toml
.cargo/: config.toml
src/: lcd.rs  main.rs  platform.rs  rgb565.rs
ui/: main.slint
